fix: mocks and added test of after mapping functions