@@ -6,19 +6,18 @@ import it.pagopa.pn.bff.mapper.NotificationDetailMapper;
 
 import java.time.OffsetDateTime;
 import java.util.ArrayList;
-import java.util.List;
+import java.util.Collections;
 import java.util.stream.Collectors;
-
-import static org.mockito.Mockito.mock;
 
 public class NotificationDetailMock {
 
     public static ArrayList<NotificationRecipientV23> recipientV23 = RecipientsMock.getRecipientsMock();
     public static ArrayList<NotificationDocument> notificationDocuments = DocumentsMock.getDocumentsMock();
     public static ArrayList<NotificationStatusHistoryElement> notificationStatusHistory = StatusHistoryMock.getStatusHistoryMock();
+    public static ArrayList<TimelineElementV23> timeline = TimelineMock.getTimelineMock();
 
     public static FullReceivedNotificationV23 notificationMultiRecipientMock() {
-        FullReceivedNotificationV23 bffFullNotificationV1Mock = mock(FullReceivedNotificationV23.class);
+        FullReceivedNotificationV23 bffFullNotificationV1Mock = new FullReceivedNotificationV23();
 
         bffFullNotificationV1Mock.setAbstract("Abstract della notifica");
         bffFullNotificationV1Mock.setPaProtocolNumber("302011692956029071");
@@ -36,25 +35,24 @@ public class NotificationDetailMock {
         bffFullNotificationV1Mock.setRecipients(recipientV23);
         bffFullNotificationV1Mock.setDocuments(notificationDocuments);
         bffFullNotificationV1Mock.setNotificationStatusHistory(notificationStatusHistory);
-        bffFullNotificationV1Mock.setTimeline(TimelineMock.getTimelineMock());
+        bffFullNotificationV1Mock.setTimeline(timeline);
 
         return bffFullNotificationV1Mock;
     }
 
     public static FullReceivedNotificationV23 getOneRecipientNotification() {
         FullReceivedNotificationV23 oneRecipientNotification = notificationMultiRecipientMock();
-
-        oneRecipientNotification.setRecipients(List.of(recipientV23.get(0)));
-        oneRecipientNotification.setTimeline(oneRecipientNotification.getTimeline().stream()
-                .filter(t -> t.getDetails().getRecIndex() == null)
+        oneRecipientNotification.setRecipients(Collections.singletonList(oneRecipientNotification.getRecipients().get(0)));
+        oneRecipientNotification.setTimeline(oneRecipientNotification.getTimeline()
+                .stream()
+                .filter(t -> t.getDetails() != null && t.getDetails().getRecIndex() == 0)
                 .collect(Collectors.toList()));
 
         for (NotificationStatusHistoryElement status : oneRecipientNotification.getNotificationStatusHistory()) {
-            status.setRelatedTimelineElements(
-                    status.getRelatedTimelineElements().stream()
-                            .filter(el -> !el.contains("RECINDEX_1"))
-                            .collect(Collectors.toList())
-            );
+            status.setRelatedTimelineElements(status.getRelatedTimelineElements()
+                    .stream()
+                    .filter(el -> !el.contains("RECINDEX_1"))
+                    .collect(Collectors.toList()));
         }
 
         return oneRecipientNotification;
@@ -70,5 +68,19 @@ public class NotificationDetailMock {
         return NotificationDetailMapper.modelMapper.mapNotificationDetail(notificationMultiRecipient);
     }
 
+
+    public static BffFullNotificationV1 notificationToFERADD() {
+        FullReceivedNotificationV23 notificationDTORadd = notificationMultiRecipientMock();
+        notificationDTORadd.setTimeline(TimelineMock.getTimelineRADDMock());
+        return NotificationDetailMapper.modelMapper.mapNotificationDetail(notificationDTORadd);
+    }
+
+    public static TimelineElementV23 getTimelineElem(TimelineElementCategoryV23 category, TimelineElementDetailsV23 details) {
+        return new TimelineElementV23()
+                .category(category)
+                .elementId(category + ".IUN_RTRD-UDGU-QTQY-202308-P-1")
+                .timestamp(OffsetDateTime.parse("2023-08-25T11:38:05.392Z"))
+                .details(details);
+    }
 
 }
